syntax = "proto3";

import "google/protobuf/timestamp.proto";

package api_key;

option go_package = "internal/adapters/grpc/api_key/pb";

service APIKeyService {
  rpc Validate(APIKeyValidateBooking) returns (APIKeyValidateResponse);
  rpc ValidateAndConsume(APIKeyValidate) returns (APIKeyValidateConsumeResponse);
  rpc ValidateAndBooking(APIKeyValidate) returns (APIKeyValidateBookingResponse);
}

message APIKeyValidate {
  string key = 1;
	string service = 2;
	string environment = 3;
	string service_version = 4;
	google.protobuf.Timestamp request_time = 5;
}

message APIKeyValidateBooking {
  string key = 1;
  string booking_id = 2;
}

message APIKeyValidateResponse {
  message Successful {
    string request_id = 1;
  }

  message Failed {
    string code = 1;
    string message = 2;
  }

  bool valid = 1;

  oneof result {
    Successful successful = 2;
    Failed failed = 3;
  }
}

message APIKeyValidateConsumeResponse {
  message Successful {
    string request_id = 1;
    int64 available_request = 2;
  }

  message Failed {
    string code = 1;
    string message = 2;
  }

  bool valid = 1;

  oneof result {
    Successful successful = 2;
    Failed failed = 3;
  }
}

message APIKeyValidateBookingResponse {
  message Successful {
    string request_id = 1;
    int64 available_request = 2;
    string booking_id = 3;
  }

  message Failed {
    string code = 1;
    string message = 2;
  }

  bool valid = 1;

  oneof result {
    Successful successful = 2;
    Failed failed = 3;
  }
}
